jetson/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vllm-gemma4
  name: vllm-gemma4
  namespace: llm-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-gemma4
  template:
    metadata:
      labels:
        app: vllm-gemma4
    spec:
      containers:
      - image: nvcr.io/nvidia/vllm:26.06-py3
        name: vllm-gemma4
        args:
        - sleep
        - infinity
        ports:
          - containerPort: 8000
        volumeMounts:
        - name: cache-volume
          mountPath: /root/.cache/huggingface
        - name: shm
          mountPath: /dev/shm
      volumes:
      - name: cache-volume
        persistentVolumeClaim:
          claimName: gemma4-e2b-qat
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: "2Gi"
