jetson/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vllm-gemma4
  name: vllm-gemma4
  namespace: llm-system
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: vllm-gemma4
  type: LoadBalancer
