jetson/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: vllm-gemma4
  name: vllm-gemma4
  namespace: llm-system
spec:
  ingressClassName: treafik
  rules:
  - host: jetson1.cluster.orenet.net
    http:
      paths:
      - backend:
          service:
            name: vllm-gemma4
            port:
              number: 8000
        path: /
        pathType: Prefix
